# source-lib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/scripts/: release.py
.github/workflows/: ci_tests.yml  docs.yml  publish.yml  test.yml  tests.yml
docs/: gen_ref_pages.py  index.md  requirements.txt  working-with-associations.md
docs/css/: custom.css
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/notebooks/: Example.ipynb  GettingStarted.ipynb
sourcelib/: __init__.py  associations.py  associators.py  collect.py  copy.py  extension.py  file.py  mode.py
tests/: associations_test.py  collect_test.py  extension_test.py  file_test.py  mode_test.py
tests/testfiles/: data.yml  test.md  testclasses.py
