[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sourcelib"]

[project]
name = "sourcelib"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [{ name = "Mart van Rijthoven", email = "mart.vanrijthoven@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["PyYaml >= 5.4.1"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/martvanrijthoven/source-lib/"
