[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sourcelib"]

[project]
name = "sourcelib"
description = "A configuration system supporting direct dependency injection in config files."
authors = [
    { name = "Mart van Rijthoven", email = "mart.vanrijthoven@gmail.com" },
]
urls = { Homepage = "https://github.com/martvanrijthoven/source-lib/" }
license = { file = "LICENSE" }
dependencies = ["PyYaml >= 5.4.1"]
requires-python = ">=3.8"
dynamic = ["version", "readme"]


[tool.setuptools.dynamic]
version = { attr = "sourcelib.__version__" }
readme = { file = ["README.md"] }
